# ckanext-mcp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/mcp/: plugin.py  server.py
ckanext/mcp/assets/: script.js  webassets.yml
ckanext/mcp/tests/: test_plugin.py
extras/docs/: mcp-dev.md
