[project]
name = "ckanext-mcp"
version = "0.0.1"
description = "A MCP server to answer questions about data"
readme = "README.md"
authors = [
    {name = "Andres", email = "andres@data99.com.ar"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "mcp", "ia", "resources", "data", "files", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/unckan/ckanext-mcp"

[project.entry-points."ckan.plugins"]
mcp = "ckanext.mcp.plugin:McpPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
